--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -1,123 +1,172 @@
 {
   "greeting": "નમસ્તે,",
   "get_started": "ચાલો શરૂ કરીએ.",
-  "login_description": "જારી રાખવા માટે તમારો નંબર ઉપયોગ કરીને લૉગિન કરો.",
+  "login_description": "ચાલુ રાખવા માટે તમારો નંબર વાપરીને લૉગિન કરો.",
   "phone_number_placeholder": "તમારો ફોન નંબર દાખલ કરો",
   "invalid_phone_number": "કૃપા કરીને માન્ય 10-અંકનો ફોન નંબર દાખલ કરો.",
   "login_button": "લૉગિન",
   "error": "ભૂલ",
-  "error_message": "તમારો નંબર સંગ્રહ કરવામાં નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+  "error_message": "તમારો નંબર સેવ કરવામાં અસફળ. કૃપા કરીને ફરીથી પ્રયાસ કરો.",
   "invalid_phone_number_title": "અમાન્ય ફોન નંબર",
   "verify_otp": "OTP ચકાસો",
-  "enter_otp_code": "તમારા ફોન પર મોકલાયેલ 4-અંકનો કોડ દાખલ કરો.",
-  "resend_otp": "OTP ફરી મોકલો",
+  "enter_otp_code": "તમારા ફોન પર મોકલેલ 4-અંકનો કોડ દાખલ કરો.",
+  "resend_otp": "OTP ફરીથી મોકલો",
   "confirm": "પુષ્ટિ કરો",
-  "your_business_name": "તમારા વ્યવસાયનું નામ",
-  "transaction_details": "વ્યવહાર વિગતો",
+  "your_business_name": "તમારા બિઝનેસનું નામ",
+  "transaction_details": "ટ્રાન્ઝેક્શન વિગતો",
   "party_details": "પાર્ટી વિગતો",
-  "manage_transaction_details": "તમારા વ્યવહારોની વિગતો અસરકારક રીતે મેનેજ કરો.",
+  "manage_transaction_details": "તમારી ટ્રાન્ઝેક્શન વિગતો કાર્યક્ષમ રીતે મેનેજ કરો.",
   "manage_party_details": "અહીં તમે તમારી પાર્ટી વિગતો જોઈ અને મેનેજ કરી શકો છો.",
   "settings": "સેટિંગ્સ",
   "accountInformation": "એકાઉન્ટ માહિતી",
-  "publicProfile": "જાહેર પ્રોફાઇલ",
-  "notifications": "સૂચનાઓ",
+  "publicProfile": "પબ્લિક પ્રોફાઇલ",
+  "notifications": "નોટિફિકેશન્સ",
   "privacy_policy": "ગોપનીયતા નીતિ",
-  "notifications_reset": "સૂચનાઓ ફરી સેટ કરો",
+  "notifications_reset": "નોટિફિકેશન્સ રીસેટ",
   "privacyAndDate": "ગોપનીયતા અને તારીખ",
-  "securityAndLogins": "સુરક્ષા અને લૉગિન",
+  "securityAndLogins": "સુરક્ષા અને લૉગિન્સ",
   "actions": "ક્રિયાઓ",
   "addAccount": "એકાઉન્ટ ઉમેરો",
   "logOut": "લૉગ આઉટ",
-  "theme_change": "થીમ બદલાવો",
-  "language_change": "ભાષા બદલાવો",
-  "back": "પાછળ",
+  "theme_change": "થીમ બદલો",
+  "language_change": "ભાષા બદલો",
+  "back": "પાછા",
   "account_information": "એકાઉન્ટ માહિતી",
-  "reset_notifications_label": "સૂચનાઓ ફરી સેટ કરો",
-  "terms_and_conditions": "શરતો અને નિયમો",
-  "term_and_condition": "શરત અને નિયમ",
-  "logout": "લૉગઆઉટ",
-  "logout_confirmation": "શું તમે ખરેખર લૉગઆઉટ કરવા માંગો છો?",
-  "logout_message": "લૉગઆઉટ માટે પુષ્ટિ દબાવો",
-  "light": "લાઇટ મોડમાં બદલાવો",
-  "dark": "ડાર્ક મોડમાં બદલાવો",
+  "reset_notifications_label": "નોટિફિકેશન્સ રીસેટ કરો",
+  "terms_and_conditions": "નિયમો અને શરતો",
+  "term_and_condition": "નિયમ અને શરત",
+  "logout": "લૉગ આઉટ",
+  "logout_confirmation": "શું તમે ખરેખર લૉગ આઉટ કરવા માંગો છો?",
+  "logout_message": "લૉગ આઉટ કરવા માટે પુષ્ટિ કરો",
+  "light": "લાઇટ મોડમાં બદલો",
+  "dark": "ડાર્ક મોડમાં બદલો",
   "web": "વેબ",
-  "notification_clean": "સૂચનાઓ સાફ કરો",
+  "notification_clean": "નોટિફિકેશન સાફ કરો",
   "cancel": "રદ કરો",
   "create_account": "એકાઉન્ટ બનાવો",
-  "signup_description": "તમારા ઈમેલ સરનામા સાથે સાઇન અપ કરો.",
-  "email_placeholder": "તમારું ઈમેલ સરનામું દાખલ કરો",
+  "signup_description": "તમારા ઇમેઇલ સરનામાં સાથે સાઇન અપ કરો.",
+  "email_placeholder": "તમારું ઇમેઇલ સરનામું દાખલ કરો",
   "password_placeholder": "તમારો પાસવર્ડ દાખલ કરો",
   "register_button": "સાઇન અપ",
-  "forgot_password": "પાસવર્ડ ભૂલાઈ ગયો?",
-  "forgot_password_description": "તમારો પાસવર્ડ રીસેટ કરવા માટે તમારું ઈમેલ સરનામું દાખલ કરો.",
+  "forgot_password": "પાસવર્ડ ભૂલી ગયા છો?",
+  "forgot_password_description": "તમારો પાસવર્ડ રીસેટ કરવા માટે તમારું ઇમેઇલ સરનામું દાખલ કરો.",
   "address": "સરનામું",
   "phoneNumber": "ફોન નંબર",
   "password": "પાસવર્ડ",
-  "email": "ઈમેલ",
+  "email": "દાખલ કરો",
   "name": "નામ",
-  "register_success": "રજીસ્ટ્રેશન સફળ",
-  "have_account": "પહેલેથી જ એકાઉન્ટ છે? લૉગિન કરો",
-  "registration_failed": "રજીસ્ટ્રેશન નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
-  "register_failed": "રજીસ્ટ્રેશન નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
-  "confirm_password_placeholder": "તમારો પાસવર્ડ પુષ્ટિ કરો",
-  "password_required_length": "પાસવર્ડ ઓછામાં ઓછો 6 અક્ષરનો હોવો જોઈએ",
-  "password_mismatch": "પાસવર્ડ મેળ ખાવો જોઈએ",
+  "register_success": "રજિસ્ટર સફળ",
+  "have_account": "પહેલાથી જ એકાઉન્ટ છે? લૉગિન કરો",
+  "registration_failed": "રજિસ્ટ્રેશન અસફળ. કૃપા કરીને ફરીથી પ્રયાસ કરો.",
+  "register_failed": "રજિસ્ટ્રેશન અસફળ. કૃપા કરીને ફરીથી પ્રયાસ કરો.",
+  "confirm_password_placeholder": "તમારો પાસવર્ડ ફરીથી દાખલ કરો",
+  "password_required_length": "પાસવર્ડ ઓછામાં ઓછા 6 અક્ષરનો હોવો જોઈએ",
+  "password_mismatch": "પાસવર્ડ મેળ ખાતો નથી",
   "login_success": "લૉગિન સફળ",
   "customer": "ગ્રાહક",
   "supplier": "સપ્લાયર",
   "dark_mode": "ડાર્ક મોડ ચાલુ કરો",
   "light_mode": "લાઇટ મોડ ચાલુ કરો",
   "reset_password": "પાસવર્ડ રીસેટ કરો",
-  "reset_description": "તમારું પાસવર્ડ રીસેટ કરવા માટે તમારું ઈમેલ દાખલ કરો.",
-  "send_reset_link": "પાસવર્ડ રીસેટ લિંક મોકલો",
-  "email_required": "કૃપા કરીને તમારું ઈમેલ દાખલ કરો.",
-  "reset_email_sent": "પાસવર્ડ રીસેટ ઈમેલ સફળતાપૂર્વક મોકલાયો!",
-  "reset_failed": "પાસવર્ડ રીસેટ ઈમેલ મોકલવામાં નિષ્ફળ.",
+  "reset_description": "તમારો પાસવર્ડ રીસેટ કરવા માટે તમારું ઇમેઇલ દાખલ કરો.",
+  "send_reset_link": "રીસેટ લિંક મોકલો",
+  "email_required": "કૃપા કરીને તમારું ઇમેઇલ દાખલ કરો.",
+  "reset_email_sent": "પાસવર્ડ રીસેટ ઇમેઇલ સફળતાપૂર્વક મોકલવામાં આવ્યો છે!",
+  "reset_failed": "પાસવર્ડ રીસેટ ઇમેઇલ મોકલવામાં અસફળ.",
   "go_back": "પાછા જાઓ",
-  "forget_password": "પાસવર્ડ ભૂલાઈ ગયો?",
+  "forget_password": "પાસવર્ડ ભૂલી ગયા છો?",
   "change_password": "પાસવર્ડ બદલો",
   "current_password_placeholder": "તમારો વર્તમાન પાસવર્ડ દાખલ કરો",
   "new_password_placeholder": "તમારો નવો પાસવર્ડ દાખલ કરો",
   "password_updated": "પાસવર્ડ સફળતાપૂર્વક અપડેટ થયો!",
   "send": "મોકલો",
-  "receive": "પ્રાપ્ત કરો",
+  "receive": "મેળવો",
   "add_customer": "ગ્રાહક ઉમેરો",
   "add_supplier": "સપ્લાયર ઉમેરો",
-  "call": "કૉલ",
+  "call": "કૉલ કરો",
   "message": "સંદેશ",
-  "accessibility": "ઍક્સેસિબિલિટી",
+  "accessibility": "એક્સેસિબિલિટી",
   "language": "ભાષા",
-  "increase_text_size": "ટેક્સ્ટ સાઇઝ વધારો",
-  "increase_text_size_A": "ટેક્સ્ટ સાઇઝ વધારો",
-  "currentTextSize": "ટેક્સ્ટ સાઇઝ",
-  "use_device_language": "ઉપકરણની ભાષાનો ઉપયોગ કરો",
+  "increase_text_size": "ટેક્સ્ટનું માપ વધારો",
+  "increase_text_size_A": "ટેક્સ્ટનું માપ વધારો",
+  "currentTextSize": "ટેક્સ્ટનું માપ",
+  "use_device_language": "ડિવાઇસની ભાષા વાપરો",
   "auto_dark_mode": "ઓટો ડાર્ક મોડ",
-  "follow_os_setting": "OS સેટિંગ અનુસરો",
+  "follow_os_setting": "OS સેટિંગને અનુસરો",
   "about": "વિશે",
-  "terms_conditions": "શરતો અને નિયમો",
+  "terms_conditions": "નિયમો અને શરતો",
   "mode": "ઓટો ડાર્ક મોડ",
   "off": "બંધ",
-  "follow_on_setting": "OS સેટિંગ અનુસરો",
-  "auto_dark_mode_on": "ઓટો ડાર્ક મોડ ચાલુ",
-  "overrideSettingsTitle": "ઉપકરણ સેટિંગ્સ ઓવરરાઇડ કરો",
-  "overrideSettingsSubtitle": "ઍપમાં ટેક્સ્ટ સાઇઝ સમાયોજિત કરો",
+  "follow_on_setting": "OS સેટિંગને અનુસરો",
+  "auto_dark_mode_on": "ઓટો ડાર્ક મોડ ચાલુ છે",
+  "overrideSettingsTitle": "ડિવાઇસ સેટિંગ્સને ઓવરરાઇડ કરો",
+  "overrideSettingsSubtitle": "તમારા ડિવાઇસના બાકીના ભાગને અસર કર્યા વિના એપમાં ટેક્સ્ટનું માપ સમાયોજિત કરો",
   "textLabel": "A",
   "increaseText": "વધારો",
   "decreaseText": "ઘટાડો",
-  "text_size_not_default": "સિસ્ટમ ડિફૉલ્ટ ટેક્સ્ટ સાઇઝ ચાલુ છે",
-  "please_fill_all_fields": "કૃપા કરીને તમામ ક્ષેત્રો ભરો",
+  "text_size_not_default": "સિસ્ટમ ડિફૉલ્ટ ટેક્સ્ટ માપ ચાલુ છે",
+  "please_fill_all_fields": "કૃપા કરીને બધા ક્ષેત્રો ભરો",
   "customer_updated_successfully": "ગ્રાહક સફળતાપૂર્વક અપડેટ થયો",
   "customer_added_successfully": "ગ્રાહક સફળતાપૂર્વક ઉમેરાયો",
   "something_went_wrong": "કંઈક ખોટું થયું",
   "edit_customer": "ગ્રાહક સંપાદિત કરો",
   "enter_customer_name": "ગ્રાહકનું નામ દાખલ કરો",
-  "enter_customer_email": "ગ્રાહકનો ઈમેલ દાખલ કરો",
+  "enter_customer_email": "ગ્રાહકનું ઇમેઇલ દાખલ કરો",
   "enter_customer_phone": "ગ્રાહકનો ફોન નંબર દાખલ કરો",
   "enter_customer_address": "ગ્રાહકનું સરનામું દાખલ કરો",
-  "loading": "લોડ થઈ રહ્યું છે...",
+  "loading": "લોડ કરી રહ્યું છે...",
   "update_customer": "ગ્રાહક અપડેટ કરો",
-  "delete": "કાઢી નાંખો",
-  "confirm_delete": "શું તમે ખરેખર આ વ્યવહાર કાઢી નાખવા માંગો છો?",
-  "show_address": "સરનામું બતાવો",
-  "close": "બંધ કરો"
+  "transcation_screen": "ટ્રાન્ઝેક્શન",
+  "transcation_list": "ટ્રાન્ઝેક્શન યાદી",
+  "change_transcation_detail": "ટ્રાન્ઝેક્શન વિગતો બદલો",
+  "change_customer_detail": "ગ્રાહક વિગતો બદલો",
+  "business": "બિઝનેસ",
+  "edit_profile": "પ્રોફાઇલ સંપાદિત કરો",
+  "enter_amount": "રકમ દાખલ કરો",
+  "edit": "સંપાદિત કરો",
+  "save": "સેવ કરો",
+  "you_gave": "તમે આપ્યું",
+  "you_got": "તમે મેળવ્યું",
+  "settement": "સેટલમેન્ટ રકમ",
+  "report": "રિપોર્ટ",
+  "sms": "SMS",
+  "amt": "રકમ",
+  "bal": "બેલ.",
+  "customer_name": "ગ્રાહકનું નામ",
+  "customer_email": "ગ્રાહકનું ઇમેઇલ (વૈકલ્પિક)",
+  "customer_phone": "ગ્રાહકનો ફોન નંબર",
+  "customer_address": "ગ્રાહકનું સરનામું (વૈકલ્પિક)",
+  "please_fill_name_phone": "કૃપા કરીને નામ અને ફોન નંબર ભરો",
+  "debit": "ડેબિટ",
+  "credit": "ક્રેડિટ",
+  "data_added": "ડેટા સફળતાપૂર્વક ઉમેરાયો",
+  "phone_exist": "ફોન નંબર પહેલાથી અસ્તિત્વમાં છે!",
+  "user_exist": "વપરાશકર્તા પહેલાથી અસ્તિત્વમાં છે",
+  "no_transactions_found": "કોઈ ટ્રાન્ઝેક્શન મળ્યું નથી",
+  "no_data_found": "કોઈ ડેટા મળ્યો નથી",
+  "phone_number": "ફોન નંબર",
+  "payment_received": "ચુકવણી મળી",
+  "payment_sent": "ચુકવણી મોકલી",
+  "total_given": "કુલ આપ્યું",
+  "total_received": "કુલ મળ્યું",
+  "you_send": "તમે મોકલો",
+  "transaction_history": "ટ્રાન્ઝેક્શન ઇતિહાસ",
+  "add_transaction": "ટ્રાન્ઝેક્શન ઉમેરો",
+  "delete": "કાઢી નાખો",
+  "transactions": "ટ્રાન્ઝેક્શન્સ",
+  "confirm_delete": "શું તમે ખરેખર આ ટ્રાન્ઝેક્શન કાઢી નાખવા માંગો છો?",
+  "total_settlement": "કુલ સેટલમેન્ટ",
+  "no_data": "કોઈ ડેટા ઉપલબ્ધ નથી",
+  "failed_to_open_sms": "SMS એપ ખોલવામાં અસફળ.",
+  "enter_business_name": "બિઝનેસનું નામ દાખલ કરો",
+  "data_updated": "ડેટા અપડેટ થયો",
+  "supplier_phone": "સપ્લાયરનો ફોન નંબર",
+  "enter_supplier_phone": "સપ્લાયરનો ફોન નંબર દાખલ કરો",
+  "supplier_name": "સપ્લાયરનું નામ",
+  "enter_supplier_name": "સપ્લાયરનું નામ દાખલ કરો",
+  "supplier_email": "સપ્લાયરનું ઇમેઇલ",
+  "enter_supplier_email": "સપ્લાયરનું ઇમેઇલ દાખલ કરો",
+  "show_address": "સરનામું જુઓ",
+  "close": "બંધ કરો",
+  "enter_transaction_amount": "લેણદેણની રકમ દાખલ કરો"
 }
