--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -1,33 +1,33 @@
 {
   "greeting": "नमस्ते,",
   "get_started": "शुरू करें।",
-  "login_description": "जारी रखने के लिए अपने नंबर से लॉगिन करें।",
+  "login_description": "जारी रखने के लिए अपने नंबर का उपयोग करके लॉगिन करें।",
   "phone_number_placeholder": "अपना फोन नंबर दर्ज करें",
-  "invalid_phone_number": "कृपया 10 अंकों का वैध फोन नंबर दर्ज करें।",
+  "invalid_phone_number": "कृपया एक वैध 10-अंकीय फोन नंबर दर्ज करें।",
   "login_button": "लॉगिन",
   "error": "त्रुटि",
-  "error_message": "आपका नंबर सहेजने में विफल रहा। कृपया पुनः प्रयास करें।",
+  "error_message": "आपका नंबर सहेजने में विफल। कृपया पुनः प्रयास करें।",
   "invalid_phone_number_title": "अमान्य फोन नंबर",
-  "verify_otp": "ओटीपी सत्यापित करें",
-  "enter_otp_code": "अपने फोन पर भेजा गया 4-अंकों का कोड दर्ज करें।",
-  "resend_otp": "ओटीपी पुनः भेजें",
+  "verify_otp": "OTP सत्यापित करें",
+  "enter_otp_code": "अपने फोन पर भेजे गए 4-अंकीय कोड दर्ज करें।",
+  "resend_otp": "OTP पुनः भेजें",
   "confirm": "पुष्टि करें",
-  "your_business_name": "आपका व्यापार नाम",
+  "your_business_name": "आपका व्यवसाय नाम",
   "transaction_details": "लेन-देन विवरण",
   "party_details": "पार्टी विवरण",
   "manage_transaction_details": "अपने लेन-देन विवरण को कुशलतापूर्वक प्रबंधित करें।",
-  "manage_party_details": "यहाँ आप अपनी पार्टी का विवरण देख और प्रबंधित कर सकते हैं।",
+  "manage_party_details": "यहां आप अपने पार्टी विवरण को देख और प्रबंधित कर सकते हैं।",
   "settings": "सेटिंग्स",
   "accountInformation": "खाता जानकारी",
   "publicProfile": "सार्वजनिक प्रोफ़ाइल",
   "notifications": "सूचनाएं",
   "privacy_policy": "गोपनीयता नीति",
-  "notifications_reset": "सूचनाएं रीसेट करें",
-  "privacyAndDate": "गोपनीयता और दिनांक",
+  "notifications_reset": "सूचनाएं रीसेट",
+  "privacyAndDate": "गोपनीयता और तिथि",
   "securityAndLogins": "सुरक्षा और लॉगिन",
-  "actions": "क्रियाएँ",
+  "actions": "क्रियाएं",
   "addAccount": "खाता जोड़ें",
-  "logOut": "लॉगआउट",
+  "logOut": "लॉग आउट",
   "theme_change": "थीम बदलें",
   "language_change": "भाषा बदलें",
   "back": "वापस",
@@ -36,39 +36,39 @@
   "terms_and_conditions": "नियम और शर्तें",
   "term_and_condition": "नियम और शर्त",
   "logout": "लॉगआउट",
-  "logout_confirmation": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
-  "logout_message": "लॉगआउट करने के लिए पुष्टि करें दबाएं",
+  "logout_confirmation": "क्या आप लॉगआउट करना चाहते हैं?",
+  "logout_message": "लॉगआउट करने के लिए पुष्टि करें",
   "light": "लाइट मोड में बदलें",
   "dark": "डार्क मोड में बदलें",
   "web": "वेब",
-  "notification_clean": "सूचनाएं साफ करें",
+  "notification_clean": "सूचनाएं साफ़ करें",
   "cancel": "रद्द करें",
-  "create_account": "खाता बनाएँ",
-  "signup_description": "अपने ईमेल पते के साथ साइन अप करें।",
+  "create_account": "खाता बनाएं",
+  "signup_description": "अपने ईमेल पते से साइन अप करें।",
   "email_placeholder": "अपना ईमेल पता दर्ज करें",
   "password_placeholder": "अपना पासवर्ड दर्ज करें",
-  "register_button": "साइन अप करें",
+  "register_button": "साइन अप",
   "forgot_password": "पासवर्ड भूल गए",
-  "forgot_password_description": "पासवर्ड रीसेट करने के लिए अपना ईमेल पता दर्ज करें।",
+  "forgot_password_description": "अपना पासवर्ड रीसेट करने के लिए अपना ईमेल पता दर्ज करें।",
   "address": "पता",
   "phoneNumber": "फोन नंबर",
   "password": "पासवर्ड",
-  "email": "ईमेल दर्ज करें",
+  "email": "दर्ज करें",
   "name": "नाम",
-  "register_success": "सफलतापूर्वक पंजीकरण हुआ",
-  "have_account": "पहले से खाता है? लॉगिन करें",
-  "registration_failed": "पंजीकरण विफल रहा। कृपया पुनः प्रयास करें।",
-  "register_failed": "पंजीकरण विफल रहा। कृपया पुनः प्रयास करें।",
+  "register_success": "पंजीकरण सफल",
+  "have_account": "पहले से ही एक खाता है? लॉगिन करें",
+  "registration_failed": "पंजीकरण विफल। कृपया पुनः प्रयास करें।",
+  "register_failed": "पंजीकरण विफल। कृपया पुनः प्रयास करें।",
   "confirm_password_placeholder": "अपना पासवर्ड पुष्टि करें",
   "password_required_length": "पासवर्ड कम से कम 6 अक्षरों का होना चाहिए",
   "password_mismatch": "पासवर्ड मेल खाना चाहिए",
-  "login_success": "सफलतापूर्वक लॉगिन हुआ",
+  "login_success": "लॉगिन सफल",
   "customer": "ग्राहक",
   "supplier": "आपूर्तिकर्ता",
   "dark_mode": "डार्क मोड चालू करें",
   "light_mode": "लाइट मोड चालू करें",
-  "reset_password": "पासवर्ड रीसेट करें",
-  "reset_description": "पासवर्ड रीसेट करने के लिए अपना ईमेल दर्ज करें।",
+  "reset_password": "पासवर्ड रीसेट",
+  "reset_description": "अपना पासवर्ड रीसेट करने के लिए अपना ईमेल दर्ज करें।",
   "send_reset_link": "रीसेट लिंक भेजें",
   "email_required": "कृपया अपना ईमेल दर्ज करें।",
   "reset_email_sent": "पासवर्ड रीसेट ईमेल सफलतापूर्वक भेजा गया!",
@@ -78,35 +78,35 @@
   "change_password": "पासवर्ड बदलें",
   "current_password_placeholder": "अपना वर्तमान पासवर्ड दर्ज करें",
   "new_password_placeholder": "अपना नया पासवर्ड दर्ज करें",
-  "password_updated": "पासवर्ड सफलतापूर्वक अपडेट हुआ!",
+  "password_updated": "पासवर्ड सफलतापूर्वक अपडेट किया गया!",
   "send": "भेजें",
   "receive": "प्राप्त करें",
   "add_customer": "ग्राहक जोड़ें",
   "add_supplier": "आपूर्तिकर्ता जोड़ें",
-  "call": "कॉल करें",
-  "message": "संदेश भेजें",
-  "accessibility": "सुलभता",
+  "call": "कॉल",
+  "message": "संदेश",
+  "accessibility": "पहुंच",
   "language": "भाषा",
-  "increase_text_size": "टेक्स्ट आकार बढ़ाएं",
-  "increase_text_size_A": "टेक्स्ट आकार बढ़ाएं",
-  "currentTextSize": "टेक्स्ट आकार",
+  "increase_text_size": "पाठ आकार बढ़ाएं",
+  "increase_text_size_A": "पाठ आकार बढ़ाएं",
+  "currentTextSize": "पाठ आकार",
   "use_device_language": "डिवाइस भाषा का उपयोग करें",
-  "auto_dark_mode": "स्वचालित डार्क मोड",
+  "auto_dark_mode": "ऑटो डार्क मोड",
   "follow_os_setting": "ओएस सेटिंग का पालन करें",
-  "about": "बारे में",
+  "about": "के बारे में",
   "terms_conditions": "नियम और शर्तें",
-  "mode": "स्वचालित डार्क मोड",
+  "mode": "ऑटो डार्क मोड",
   "off": "बंद",
   "follow_on_setting": "ओएस सेटिंग का पालन करें",
-  "auto_dark_mode_on": "स्वचालित डार्क मोड चालू",
-  "overrideSettingsTitle": "डिवाइस सेटिंग्स ओवरराइड करें",
-  "overrideSettingsSubtitle": "बिना डिवाइस को प्रभावित किए ऐप में टेक्स्ट आकार समायोजित करें",
-  "textLabel": "ए",
+  "auto_dark_mode_on": "ऑटो डार्क मोड चालू",
+  "overrideSettingsTitle": "डिवाइस सेटिंग्स को ओवरराइड करें",
+  "overrideSettingsSubtitle": "अपने डिवाइस के बाकी हिस्सों को प्रभावित किए बिना ऐप में पाठ आकार समायोजित करें",
+  "textLabel": "A",
   "increaseText": "बढ़ाएं",
   "decreaseText": "घटाएं",
-  "text_size_not_default": "सिस्टम डिफ़ॉल्ट टेक्स्ट आकार चालू है",
+  "text_size_not_default": "सिस्टम डिफ़ॉल्ट पाठ आकार चालू है",
   "please_fill_all_fields": "कृपया सभी फ़ील्ड भरें",
-  "customer_updated_successfully": "ग्राहक सफलतापूर्वक अपडेट हुआ",
+  "customer_updated_successfully": "ग्राहक सफलतापूर्वक अपडेट किया गया",
   "customer_added_successfully": "ग्राहक सफलतापूर्वक जोड़ा गया",
   "something_went_wrong": "कुछ गलत हो गया",
   "edit_customer": "ग्राहक संपादित करें",
@@ -127,11 +127,48 @@
   "save": "सहेजें",
   "you_gave": "आपने दिया",
   "you_got": "आपको मिला",
-  "settement": "समायोजन राशि",
+  "settement": "समझौता राशि",
   "report": "रिपोर्ट",
+  "sms": "एसएमएस",
+  "amt": "राशि",
+  "bal": "शेष",
+  "customer_name": "ग्राहक का नाम",
+  "customer_email": "ग्राहक का ईमेल (वैकल्पिक)",
+  "customer_phone": "ग्राहक का फोन नंबर",
+  "customer_address": "ग्राहक का पता (वैकल्पिक)",
+  "please_fill_name_phone": "कृपया नाम और फोन नंबर भरें",
+  "debit": "डेबिट",
+  "credit": "क्रेडिट",
+  "data_added": "डेटा सफलतापूर्वक जोड़ा गया",
+  "phone_exist": "फोन नंबर पहले से मौजूद है!",
+  "user_exist": "उपयोगकर्ता पहले से मौजूद है",
+  "no_transactions_found": "कोई लेन-देन नहीं मिला",
+  "no_data_found": "कोई डेटा नहीं मिला",
+  "phone_number": "फोन नंबर",
+  "payment_received": "भुगतान प्राप्त हुआ",
+  "payment_sent": "भुगतान भेजा गया",
+  "total_given": "कुल दिया गया",
+  "total_received": "कुल प्राप्त हुआ",
+  "you_send": "आपने भेजा",
+  "transaction_history": "लेन-देन इतिहास",
+  "add_transaction": "लेन-देन जोड़ें",
   "delete": "हटाएं",
   "transactions": "लेन-देन",
   "confirm_delete": "क्या आप वाकई इस लेन-देन को हटाना चाहते हैं?",
-  "no_data": "कोई डेटा उपलब्ध नहीं",
-  "close": "बंद करें"
+  "total_settlement": "कुल समझौता",
+  "no_data": "कोई डेटा उपलब्ध नहीं है",
+  "failed_to_open_sms": "एसएमएस ऐप खोलने में विफल।",
+  "enter_business_name": "व्यवसाय का नाम दर्ज करें",
+  "data_updated": "डेटा अपडेट किया गया",
+  "supplier_phone": "आपूर्तिकर्ता का फोन नंबर",
+  "enter_supplier_phone": "आपूर्तिकर्ता का फोन नंबर दर्ज करें",
+  "supplier_name": "आपूर्तिकर्ता का नाम",
+  "enter_supplier_name": "आपूर्तिकर्ता का नाम दर्ज करें",
+  "supplier_email": "आपूर्तिकर्ता का ईमेल",
+  "enter_supplier_email": "आपूर्तिकर्ता का ईमेल दर्ज करें",
+  "supplier_address": "आपूर्तिकर्ता का पता",
+  "enter_supplier_address": "आपूर्तिकर्ता का पता दर्ज करें",
+  "show_address": "पता दिखाएं",
+  "close": "बंद करें",
+  "enter_transaction_amount": "लेनदेन की राशि दर्ज करें"
 }
