--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -168,5 +168,8 @@
   "enter_supplier_email": "સપ્લાયરનું ઇમેઇલ દાખલ કરો",
   "show_address": "સરનામું જુઓ",
   "close": "બંધ કરો",
-  "enter_transaction_amount": "લેણદેણની રકમ દાખલ કરો"
+  "enter_transaction_amount": "લેણદેણની રકમ દાખલ કરો",
+  "exit_app": "એપમાંથી બહાર નીકળો",
+  "exit_title": "શું તમે ખરેખર બહાર નીકળવા માંગો છો?",
+  "yes": "હાં"
 }
