--- a/src/locales/gu/translation.json
+++ b/src/locales/gu/translation.json
@@ -171,5 +171,7 @@
   "enter_transaction_amount": "લેણદેણની રકમ દાખલ કરો",
   "exit_app": "એપમાંથી બહાર નીકળો",
   "exit_title": "શું તમે ખરેખર બહાર નીકળવા માંગો છો?",
-  "yes": "હાં"
+  "yes": "હાં",
+  "login_failed":"લોગિન નિષ્ફળ"
+
 }
