--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -174,5 +174,7 @@
   
   "exit_app": "ऐप से बाहर निकलें",
   "exit_title": "क्या आप वाकई बाहर निकलना चाहते हैं?",
-  "yes": "हाँ"
+  "yes": "हाँ",
+  "login_failed":"लॉगिन विफल"
+
 }
